# tinyprojects

./: .gitmodules  README.md
arm/main/: CMakeLists.txt  main.c  peripherals.c
arm/main/include/: peripherals.h
meridia/: CMakeLists.txt  README.md
meridia/main/: audio.h  main.c
stepper-music/: midibuild
stepper-music/fatfs_image/: hello.txt  test.mid
stepper-music/main/: CMakeLists.txt  main.c  midi.c  stepper.c
stepper-music/main/include/: frequency.h  midi.h  stepper.h
stepper-music/main/include/midi/: god_multi.h
vinyl/: .gitignore
vinyl/main/: main.c
